Fix z-index of drill

--- a/src/modules/location-hud/iceberg/styles.css
+++ b/src/modules/location-hud/iceberg/styles.css
@@ -136,3 +136,7 @@
     color: #a5cedf;
     opacity: 1;
 }
+
+#icebergDrill {
+  z-index: 2;
+}
